Se añade funcionalidad para realizar, obtener y borrar pedidos tanto a nivel de usuario como de administración
